Fix alignment errors in nav menu

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,139 +1,184 @@
-.side-panel {
-  display: flex;
+* {
+  font-family: lato, sans-serif;
+}
+
+#header {
+  position: absolute;
+  width: 70%;
+  height: 100%;
   flex-direction: column;
-  width: 18rem;
-  height: 100vh;
-  background-color: #fff;
-  border-right: 1px solid rgba(0, 0, 0, 0.1);
-  box-shadow: 1px 10px 5px;
-}
-
-.logo-div {
-  text-align: center;
-  padding: 20px;
-}
-
-.logo {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-}
-
-.side-nav {
-  display: flex;
-  flex-direction: column;
-  padding: 20px;
-  margin-top: 20px;
-}
-
-.side-nav a {
-  color: black;
-  text-decoration: none;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  font-family: Arial, Helvetica, sans-serif;
-  font-weight: bold;
-  font-size: 12px;
-}
-
-.side-nav a.active {
-  background-color: limegreen;
-  padding: 10px;
-}
-
-.footer {
-  margin: auto;
-}
-
-.footer a {
-  padding: 10px;
-}
-
-.footer p {
-  font-size: 10px;
-  text-align: center;
-}
-
-.menu-icon {
-  cursor: pointer;
-  position: fixed;
-  top: 20px;
-  left: 20px;
+  justify-content: space-between;
+  padding: 1rem 0;
+  padding-left: 1rem;
+  transition: 0.5s;
+  top: 0;
+  backdrop-filter: blur(50px);
   z-index: 999;
-  display: flex;
-  flex-direction: column;
-  width: 30px;
-  height: 30px;
-  background-color: transparent;
+  background-color: white;
 }
 
-/* Open/close menu styles */
-.open .bar:nth-child(1) {
-  transform: translateY(6px) rotate(-45deg);
-}
-
-.open .bar:nth-child(2) {
-  opacity: 0;
-}
-
-.open .bar:nth-child(3) {
-  transform: translateY(-6px) rotate(45deg);
-}
-
-.menu {
+.logo, footer {
   display: none;
 }
 
-/* Media query for screens with a width of 375px or smaller */
-@media screen and (max-width: 800px) {
-  .side-nav,
-  .logo,
-  footer {
+.mobile-nav {
+  display: flex;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 3rem;
+  z-index: 1000;
+}
+
+.bars {
+  font-size: 3rem;
+  margin: 1rem 0 0 1rem;
+}
+
+.hide {
+  display: none;
+}
+
+.show {
+  display: block;
+}
+
+.nav-panel h2 {
+  margin-bottom: 2rem;
+  text-align: left;
+  font-size: 15px;
+}
+
+.nav-panel li {
+  text-align: left;
+  width: 50%;
+  list-style-type: none;
+  margin: 0.5rem 0;
+  padding: 5px;
+  border-top-left-radius: 3px;
+  border-bottom-left-radius: 3px;
+  transition: 0.3s linear;
+}
+
+.nav-panel ul {
+  margin: 9rem 0;
+}
+
+.nav-panel li:active {
+  background-color: var(--green);
+  padding: 5px;
+}
+
+.nav-panel li:hover {
+  background-color: var(--green);
+  padding: 5px;
+}
+
+.nav-panel a {
+  text-align: left;
+  font-size: 1rem;
+  color: rgb(61, 61, 61);
+  outline: none;
+  text-transform: uppercase;
+  text-decoration: none;
+}
+
+.nav-panel li:active a {
+  color: white;
+}
+
+.nav-panel li:hover a {
+  color: rgb(255, 254, 254);
+}
+
+.close {
+  position: absolute;
+  z-index: 100;
+  height: 2rem;
+  width: 2rem;
+  top: 12px;
+  right: 12px;
+}
+
+.sign-out {
+  background: transparent;
+  border: none;
+  color: rgb(60, 57, 57);
+  font-size: 10px;
+  padding: 0;
+}
+
+@media (min-width: 768px) {
+  #header {
+    width: 23%;
+    display: block;
+    position: relative;
+    height: 100%;
+    padding: 2rem 0;
+    padding-left: 2rem;
+    box-shadow: 0 0 10px 0 rgb(200, 200, 200);
+  }
+
+  .logo {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+  }
+
+  .nav-panel {
+    margin-right: 2rem;
+  }
+
+  .mobile-nav {
     display: none;
   }
 
-  .side-panel {
-    border: none;
-    box-shadow: none;
+  .nav-panel ul {
+    margin: 3rem 0;
   }
 
-  .bar {
+  .nav-panel li {
     width: 100%;
-    height: 3px;
-    background-color: #333;
-    margin: 2px 0;
-    transition: 0.4s;
   }
 
-  .menu-icon {
+  .nav-panel a {
+    font-size: 0.8rem;
+  }
+
+  .nav-panel li:active {
+    background-color: var(--green);
+  }
+
+  .nav-panel li:hover {
+    background-color: var(--green);
+  }
+
+  .logo-container {
     display: flex;
+    justify-content: center;
   }
 
-  .side-nav.open {
+  .logo {
     display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 70%;
-    height: 100%;
-    background-color: #fff;
-    z-index: 998;
-    padding-top: 50px;
-    border-right: 1px solid rgb(63, 62, 62);
-    border-top: 1px solid rgb(120, 118, 118);
-    box-shadow: 1px 10px 5px;
-    border-top-right-radius: 8px;
   }
 
-  .side-nav.open a {
-    display: block;
-    padding: 15px;
-    color: black;
-    text-decoration: none;
+  .sign-out {
+    font-size: 12px;
   }
-}
 
-.content {
-  flex-grow: 1;
-  padding: 20px;
+  .footer {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  .footer a {
+    padding: 10px;
+  }
+
+  .footer p {
+    font-size: 10px;
+    text-align: center;
+  }
 }
